feat(user): add login
Add RefreshToken method in user repository and change expiration time of tokens

Related: #6
