# internal/service/user/dto/request/user_login_request.go
@@ -1,0 +1,6 @@
+package request
+
+type UserLoginRequest struct {
+	PhoneNumber string `json:"phoneNumber"`
+	Password    string `json:"password"`
+}
